@@ -1,5 +1,6 @@
 2012-02-03 Guido Scholz <guido.scholz@bayernline.de>
 	* main.cpp: Remove obsolete commandline option -l (preset file).
+	Add commandline option for program version (--version).
 
 2012-02-02 Guido Scholz <guido.scholz@bayernline.de>
 	* main.cpp: Reorganize commandline options for input and output to
